--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: hello-world3
 run-name: ${{ github.actor }} is learning GitHub Actions
-'on': push
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
   job1:
     runs-on: ubuntu-latest
