--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    branch_protection_rule:
+      types: [ created, deleted ]
 jobs:
   job-01:
     runs-on: ubuntu-latest
@@ -19,6 +21,7 @@ jobs:
   job-03:
     steps:
       - name: my-step-3
+        runs-on: windows-latest
         run: echo "Hello World Test -3!"
     
     
