--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,16 @@ jobs:
     steps:
       - name: my-step-3
         run: echo "Hello World Test -3!"
-    
+   job-04:
+     runs-on: windows-latest
+            steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-dotnet@v1
+            - name: Build
+              run: dotnet build
+            - name: Run tests
+              run: dotnet test
+
     
 
 
