--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,16 @@
 name: hello-world-code-test
-run-name: ${{ github.actor }} is learning GitHub Actions
-on:
+run-name: '${{ github.actor }} is learning GitHub Actions'
+'on':
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
     branch_protection_rule:
-      types: [ created, deleted ]
+      types:
+        - created
+        - deleted
 jobs:
   job-01:
     runs-on: ubuntu-latest
@@ -23,17 +27,20 @@ jobs:
     steps:
       - name: my-step-3
         run: echo "Hello World Test -3!"
-   job-04:
-     runs-on: windows-latest
-            steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-dotnet@v1
-            - name: Build
-              run: dotnet build
-            - name: Run tests
-              run: dotnet test
-
-    
-
-
-    
+  job-04:
+    runs-on: windows-latest
+    steps1:
+      - name: my-step-4
+        run: echo "Hello World Test -4!"
+      - uses: actions/checkout@v2
+      - name: my-step-4
+        run: echo "Hello World Test -4!"
+      - name: my-step-4
+        run: echo "Hello World Test -4!"
+    steps2:
+      - name: my-step-5
+        run: echo "Hello World Test -5!"
+      - uses: actions/checkout@v2
+      - uses: actions/setup-dotnet@v1
+      - name: Build
+        run: dotnet build
