--- a/.github/workflows/clientMain.yml
+++ b/.github/workflows/clientMain.yml
@@ -10,7 +10,14 @@ jobs:
         run: echo "Hello World -1!"
 
   my-job-2:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: my-step
         run: echo "Hello World -2!"
+
+  my-job-3:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/labeler@v4
+      - name: composite actions called
+        run: echo "Hello World -3!"
