--- a/.github/workflows/ResuableWorkflow1.yml
+++ b/.github/workflows/ResuableWorkflow1.yml
@@ -1,6 +1,6 @@
 name: Reusable workflow - 1
-run-name: '${{ github.actor }} is learning GitHub Actions'
-'on':
+run-name: "${{ github.actor }} is learning GitHub Actions"
+"on":
   workflow_call:
 
 jobs:
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Workflow get Called - One
-      - uses: actions/checkout@v3 
- 
+      - uses: actions/checkout@v3
+
   
