--- a/.github/workflows/mainStart.yml
+++ b/.github/workflows/mainStart.yml
@@ -5,5 +5,5 @@ on:
 jobs:
  job_1:
  
-   uses: TestGithubActions/blob/main/.github/workflows/Resuable.yml
+   uses: TestGithubActions/.github/workflows/Resuable.yml
 
