--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,42 @@
-name: Main class workflow
+name: Sample Manual Dispatch workflow test
+
 on:
   workflow_dispatch:
+    inputs:
+      name:
+        description: 'Who to greet'
+        required: true
+        default: 'World'
 
 jobs:
- job_1:
+  greet_jb1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Greeting Step-1
+        run: echo "Hello ${{ github.event.inputs.name }}"
+
+  greet_jb2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Greeting Step-2
+        run: echo "Hello World"
+
+
+  greet_jb3:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Greeting Step-3
+        run: echo "Hello World"
+
+  greet_jb4:
+    runs-on: ubuntu-latest
+    steps:
+      - name: my-step-4
+        run: echo "Hello World -4!"
+
+         
+
+
+            
+
  
-   uses: ./.github/workflows/Resuable.yml
